syntax = "proto3";

option csharp_namespace = "GrpcLibraryService";

service LibraryService {
    rpc UploadBookData (UploadFileRequest) returns (UploadFileResponse);
    rpc UploadUserData (UploadFileRequest) returns (UploadFileResponse);
}

message UploadFileRequest {
    bytes file = 1;
    string fileName = 2;
}

message UploadFileResponse {
    bool success = 1;
    string message = 2;
}